# kcf_faster-rcnn

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  cufhog.cu  cufhog.h  fhog_api.cu  fhog_api.h  my_util.cu  my_util.h  test.cpp
src/: cufftTool.cpp  cufftTool.h  kcftracker.cpp  kcftracker.hpp  mylibenv.h  myutil.cpp  myutil.h  runtracker.cpp
